Fix style broken on mobile page

--- a/styles/home/_home.scss
+++ b/styles/home/_home.scss
@@ -107,25 +107,20 @@
       height: 100%;
       min-height: 100%;
       z-index: -100;
-
-      &.have_padding {
-        padding-top: 6rem;
-        
-        @include media-breakpoint-up(md) { 
-          padding-top: 8.25rem;
-        }
-      }
       
       .carousel-item {
-        background-attachment: fixed;
         min-height: 100%;
         height: 100%;
         background-repeat: no-repeat;
         background-size: 100% 100%;
-        background-position-y: 6rem;
-    
-        @include media-breakpoint-up(md) { 
-          background-position-y: 8.25rem;
+
+        &.bg_plus_pos_y {
+          background-position-y: 6rem;
+
+          @include media-breakpoint-up(md) { 
+            background-attachment: fixed;
+            background-position-y: 8.25rem;
+          }
         }
 
         .slide_content_container {
